Fix for statistics overlapping

--- a/themes/grav/scss/template/_admin.scss
+++ b/themes/grav/scss/template/_admin.scss
@@ -1148,7 +1148,7 @@ body.sidebar-quickopen #admin-main {
 #popularity .ct-chart {
     margin: 0 -10px -10px;
     .ct-chart-bar {
-        padding: 6px 6px 6px 10px;
+        padding: 4px 6px 1px 10px;
     }
 }
 
